# pydantic-settings-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  how_to_release.md
docs/cheatsheets/: release_major.md  release_minor.md  release_patch.md  update_changelog.md
docs/knowledges/: about_this_project.md
examples/: settings.yaml
examples/app/: __init__.py  __main__.py
examples/app/cli/: __init__.py  _settings.py  cli.py
examples/app/slack/: __init__.py  _settings.py
examples/app/slack/_helpers/: send_slack_message.py
pydantic_settings_manager/: __init__.py  cli.py  helpers.py  manager.py  mapped.py  types.py
pydantic_settings_manager/_constants/: default_key.py
pydantic_settings_manager/_exceptions/: user_config_error.py
pydantic_settings_manager/_helpers/: clear_user_configs.py  generate_user_configs_yaml.py  load_user_configs.py
pydantic_settings_manager/_models/: settings_manager.py
pydantic_settings_manager/_operations/: build_user_config_error_message.py  generate_settings_fields_yaml_lines.py  resolve_module_config_path.py  resolve_settings_manager.py
pydantic_settings_manager/_types/: config_policy.py  config_update_policy.py  missing_module_policy.py  module_name.py  multi_user_config.py  settings_key.py  single_user_config.py  user_config.py  user_configs.py
pydantic_settings_manager/_utils/: diff_dict.py  update_dict.py
tests/: test_cli.py  test_helpers.py  test_manager.py  test_mapped.py  test_single.py  test_thread_safety.py
tests/_helpers/: test_clear_user_configs.py  test_generate_user_configs_yaml.py  test_load_user_configs.py
tests/_models/: test_settings_manager.py
tests/_operations/: test_resolve_module_config_path.py  test_resolve_settings_manager.py
tests/_utils/: test_diff_dict.py  test_update_dict.py
tests/use_cases/: test_thread_safety.py  test_user_config_error.py
